overflow issue and hosting issue

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@
     width: 60%;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 .mainfont {
